examples/js-custom-tab/src/unsplash-source.css
@import "@splidejs/splide/dist/css/splide-core.min.css";

uc-unsplash-source {
  display: flex;
  flex-direction: column;
  width: 100%;
  height: 100%;
  background-color: var(--uc-background);
  overflow: hidden;
}

uc-modal uc-unsplash-source {
  width: min(
    calc(var(--uc-dialog-max-width) - var(--uc-padding) * 2),
    calc(var(--uc-dialog-max-width) - var(--uc-padding) * 2)
  );
  height: var(--modal-content-height-fill, 100%);
  max-height: var(--modal-max-content-height);}

uc-unsplash-source .uc-toolbar {
  display: flex;
  justify-content: space-between;
  align-items: center;
  width: 100%;
  padding: var(--uc-padding);
}

uc-unsplash-source .uc-content {
  display: flex;
  overflow: hidden;
  flex: 1 1 0;
  min-height: 0;
}

uc-unsplash-source .uc-image-slider {
  display: flex;
  height: 100%;
  width: 100%;
  transition: all 0.3s;
}

uc-unsplash-source .uc-image-slider img {
  max-width: 100%;
  max-height: 100%;
  object-fit: cover;
  flex: 0 0 100%;
}

uc-unsplash-source .splide {
  width: 100%;
}

uc-unsplash-source .splide__track {
  height: 100%;
}

uc-unsplash-source .splide__slide {
  display: flex;
  align-items: center;
  justify-content: center;
  overflow: hidden;
}

uc-unsplash-source .splide__slide img {
  height: 100%;
  object-fit: cover;
  flex: 0 1 100%;
}

